@@ -6,6 +6,10 @@
 	'wavelets'.
 	* configure.ac, doc/cvtool.texi, doc/cvtool.1, doc/cvl.texi: Bump
 	version number and shared library number.
+	* cvl/cvl_wavelets.c, cvl/cvl/cvl_wavelets.h, cvl/cvl/cvl.h,
+	cvl/glsl/wavelets, cvl/Makefile.am, cvtool/cmd_wavelets.c: Improve
+	naming of wavelet functions.
+
 
 
 2008-08-19  Martin Lambers <marlam@marlam.de>
